archetect-templating/tests/snapshots/test_parser__parser@ifexpr.txt.snap
---
source: archetect_templating/tests/test_parser.rs
description: "{{ a if b else c }}\n{{ a if b }}"
input_file: archetect_templating/tests/parser-inputs/ifexpr.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: IfExpr {
                    test_expr: Var {
                        id: "b",
                    } @ 1:8-1:9,
                    true_expr: Var {
                        id: "a",
                    } @ 1:3-1:4,
                    false_expr: Some(
                        Var {
                            id: "c",
                        } @ 1:15-1:16,
                    ),
                } @ 1:0-1:16,
            } @ 1:0-1:16,
            EmitRaw {
                raw: "\n",
            } @ 1:19-2:0,
            EmitExpr {
                expr: IfExpr {
                    test_expr: Var {
                        id: "b",
                    } @ 2:8-2:9,
                    true_expr: Var {
                        id: "a",
                    } @ 2:3-2:4,
                    false_expr: None,
                } @ 2:0-2:9,
            } @ 2:0-2:9,
        ],
    } @ 0:0-2:12,
)
