archetect-templating/tests/snapshots/test_parser__parser@in.txt.snap
---
source: archetect_templating/tests/test_parser.rs
description: "{{ value in sequence }}\n{{ value not in sequence }}\n{{ not value in sequence }}"
input_file: archetect_templating/tests/parser-inputs/in.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: BinOp {
                    op: In,
                    left: Var {
                        id: "value",
                    } @ 1:3-1:8,
                    right: Var {
                        id: "sequence",
                    } @ 1:12-1:20,
                } @ 1:0-1:20,
            } @ 1:0-1:20,
            EmitRaw {
                raw: "\n",
            } @ 1:23-2:0,
            EmitExpr {
                expr: UnaryOp {
                    op: Not,
                    expr: BinOp {
                        op: In,
                        left: Var {
                            id: "value",
                        } @ 2:3-2:8,
                        right: Var {
                            id: "sequence",
                        } @ 2:16-2:24,
                    } @ 2:0-2:24,
                } @ 2:0-2:24,
            } @ 2:0-2:24,
            EmitRaw {
                raw: "\n",
            } @ 2:27-3:0,
            EmitExpr {
                expr: UnaryOp {
                    op: Not,
                    expr: BinOp {
                        op: In,
                        left: Var {
                            id: "value",
                        } @ 3:7-3:12,
                        right: Var {
                            id: "sequence",
                        } @ 3:16-3:24,
                    } @ 3:3-3:24,
                } @ 3:3-3:24,
            } @ 3:0-3:24,
        ],
    } @ 0:0-3:27,
)
