archetect-templating/tests/snapshots/test_parser__parser@include.txt.snap
---
source: archetect_templating/tests/test_parser.rs
description: "{% include \"foo.txt\" %}"
input_file: archetect_templating/tests/parser-inputs/include.txt
---
Ok(
    Template {
        children: [
            Include {
                name: Const {
                    value: "foo.txt",
                } @ 1:11-1:20,
                ignore_missing: false,
            } @ 1:3-1:20,
        ],
    } @ 0:0-1:23,
)
