archetect-templating/tests/snapshots/test_parser__parser@list.txt.snap
---
source: archetect_templating/tests/test_parser.rs
description: "{{ [1, 2, foo] }}\n{{ [1, 2, 3,] }}"
input_file: archetect_templating/tests/parser-inputs/list.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: List {
                    items: [
                        Const {
                            value: 1,
                        } @ 1:4-1:5,
                        Const {
                            value: 2,
                        } @ 1:7-1:8,
                        Var {
                            id: "foo",
                        } @ 1:10-1:13,
                    ],
                } @ 1:3-1:14,
            } @ 1:0-1:14,
            EmitRaw {
                raw: "\n",
            } @ 1:17-2:0,
            EmitExpr {
                expr: List {
                    items: [
                        Const {
                            value: 1,
                        } @ 2:4-2:5,
                        Const {
                            value: 2,
                        } @ 2:7-2:8,
                        Const {
                            value: 3,
                        } @ 2:10-2:11,
                    ],
                } @ 2:3-2:13,
            } @ 2:0-2:13,
        ],
    } @ 0:0-2:16,
)
