archetect-templating/tests/snapshots/test_parser__parser@macros.txt.snap
---
source: archetect_minijinja/tests/test_parser.rs
description: "{% macro foo() %}...{% endmacro %}\n{% macro foo(a, b) %}...{% endmacro %}\n{% macro foo(a, b=42) %}...{% endmacro %}\n{% macro foo(a, b,) %}...{% endmacro %}\n{% macro foo(a, b=42,) %}...{% endmacro %}"
input_file: archetect_minijinja/tests/parser-inputs/macros.txt
---
Ok(
    Template {
        children: [
            Macro {
                name: "foo",
                args: [],
                defaults: [],
                body: [
                    EmitRaw {
                        raw: "...",
                    } @ 1:17-1:20,
                ],
            } @ 1:3-1:31,
            EmitRaw {
                raw: "\n",
            } @ 1:34-2:0,
            Macro {
                name: "foo",
                args: [
                    Var {
                        id: "a",
                    } @ 2:13-2:14,
                    Var {
                        id: "b",
                    } @ 2:16-2:17,
                ],
                defaults: [],
                body: [
                    EmitRaw {
                        raw: "...",
                    } @ 2:21-2:24,
                ],
            } @ 2:3-2:35,
            EmitRaw {
                raw: "\n",
            } @ 2:38-3:0,
            Macro {
                name: "foo",
                args: [
                    Var {
                        id: "a",
                    } @ 3:13-3:14,
                    Var {
                        id: "b",
                    } @ 3:16-3:17,
                ],
                defaults: [
                    Const {
                        value: 42,
                    } @ 3:18-3:20,
                ],
                body: [
                    EmitRaw {
                        raw: "...",
                    } @ 3:24-3:27,
                ],
            } @ 3:3-3:38,
            EmitRaw {
                raw: "\n",
            } @ 3:41-4:0,
            Macro {
                name: "foo",
                args: [
                    Var {
                        id: "a",
                    } @ 4:13-4:14,
                    Var {
                        id: "b",
                    } @ 4:16-4:17,
                ],
                defaults: [],
                body: [
                    EmitRaw {
                        raw: "...",
                    } @ 4:22-4:25,
                ],
            } @ 4:3-4:36,
            EmitRaw {
                raw: "\n",
            } @ 4:39-5:0,
            Macro {
                name: "foo",
                args: [
                    Var {
                        id: "a",
                    } @ 5:13-5:14,
                    Var {
                        id: "b",
                    } @ 5:16-5:17,
                ],
                defaults: [
                    Const {
                        value: 42,
                    } @ 5:18-5:20,
                ],
                body: [
                    EmitRaw {
                        raw: "...",
                    } @ 5:25-5:28,
                ],
            } @ 5:3-5:39,
        ],
    } @ 0:0-5:42,
)
